# way-rs

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml  index.html  verified.html
src/: error.rs  html.rs  main.rs
static/: globals.css  index.html  verified.html
svelte/: index.html  package-lock.json  package.json
svelte/src/: App.svelte  app.css
templates/: index.html  verified.html
