[package]
name = "way"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.18", features = ["macros"] }
hmac = "0.12.1"
jwt = "0.16.0"
serde = { version = "1.0.163", features = ["derive"] }
sha2 = "0.10.6"
tokio = { version = "1.28.1", features = ["full"] }
tower-cookies = "0.9.0"
